@@ -3,6 +3,9 @@
 ##################################################
 
 1.38 (not yet released)
+   *    (ms) Bob Kleemann reported that logdie() in wrapper classes
+             printed incorrect caller lines. Fixed by adding 
+             caller_depth_offset() utility to Log4perl.pm.
    *    (ms) Meir Guttman reported a use case for logging messages
              with dynamic levels on log4perl-devel@lists.sourceforge.net.
              Added to manual page.
